--- a/wp-content/themes/ryancv/assets/css/dark.css
+++ b/wp-content/themes/ryancv/assets/css/dark.css
@@ -549,7 +549,7 @@ input[type="submit"]:hover {
 }
 
 .revs-item .text:before, .revs-item .text:after {
-	background: url(https://yelinaung.dev/wp-content/themes/ryancv/assets/images/quote_d.svg) no-repeat;
+	background: url(https://www.yelinaung.dev/wp-content/themes/ryancv/assets/images/quote_d.svg) no-repeat;
 	background-size: contain;
 }
 
