--- a/wp-content/themes/ryancv/style.css
+++ b/wp-content/themes/ryancv/style.css
@@ -4259,7 +4259,7 @@ dd {
 	top: 3px;
 	width: 14px;
 	height: 14px;
-	background: url(https://yelinaung.dev/wp-content/themes/ryancv/assets/images/quote.svg) no-repeat;
+	background: url(https://www.yelinaung.dev/wp-content/themes/ryancv/assets/images/quote.svg) no-repeat;
 	background-size: contain;
 	opacity: 0.65;
 }
@@ -5014,7 +5014,7 @@ h2.screen-reader-text {
 	display: block;
 	width: 11px;
 	height: 12px;
-	background: url(https://yelinaung.dev/wp-content/themes/ryancv/assets/images/pag.png) no-repeat center center;
+	background: url(https://www.yelinaung.dev/wp-content/themes/ryancv/assets/images/pag.png) no-repeat center center;
 	background-size: contain;
 	-webkit-transform: scaleX(-1);
 	transform: scaleX(-1);
@@ -5111,7 +5111,7 @@ a.next.page-numbers:hover {
 	display: block;
 	width: 11px;
 	height: 20px;
-	background: url(https://yelinaung.dev/wp-content/themes/ryancv/assets/images/pag.png) no-repeat center center;
+	background: url(https://www.yelinaung.dev/wp-content/themes/ryancv/assets/images/pag.png) no-repeat center center;
 	-webkit-transform: scaleX(-1);
 	transform: scaleX(-1);
 	-webkit-transition: all 0.3s ease 0s;
@@ -5967,14 +5967,14 @@ a.next.page-numbers:hover {
 	float: right;
 	width: 50px;
 	height: 50px;
-	background: url(https://yelinaung.dev/wp-content/themes/ryancv/assets/images/android-search.png) no-repeat center center;
+	background: url(https://www.yelinaung.dev/wp-content/themes/ryancv/assets/images/android-search.png) no-repeat center center;
 	background-size: 18px 18px;
 	font-size: 0;
 	border: none;
 }
 
 .search-form input.search-submit:hover {
-	background: url(https://yelinaung.dev/wp-content/themes/ryancv/assets/images/android-search.png) no-repeat center center;
+	background: url(https://www.yelinaung.dev/wp-content/themes/ryancv/assets/images/android-search.png) no-repeat center center;
 	background-size: 18px 18px;
 }
 
